<resources>
    <string name="app_name">养生汤</string>

    <!--冬瓜薏米猪肉汤-->
    <string name="DG">【冬瓜薏米猪肉汤】</string>
    <string name="dg_material">准备材料</string>
    <string name="dg_material_1">冬瓜、薏米、土猪肉、姜、蜜枣</string>
    <string name="dg_how">做法</string>
    <string name="dg_how_todo">1、把所有材料洗净放入汤锅;\n2、加入适量的水大火烧开转小火煲2.5小时;\n3、关火加盐。</string>
    <string name="dg_effect">功效</string>
    <string name="dg_effect_1">生活在广东，好象一年四季都离不开汤水，总是觉得在每个季节汤都很重要，春天要祛湿，必须要多喝祛湿的汤。\n\n冬瓜: 冬瓜汁的功效： 清热毒，利小便，止渴除烦，祛湿解暑，解鱼毒。 主治：热毒痈肿，小便不利，心胸烦热，口渴面热，小腹水胀。
\n\n薏米 :有利水消肿、健脾去湿、舒筋除痹、清热排脓等功效。</string>

    <!--黑豆鲫鱼汤-->
    <string name="HD">【黑豆鲫鱼汤】</string>
    <string name="hd_material">准备材料</string>
    <string name="hd_material_1">鲫鱼一条（约500克），黑豆一小把，姜一块切片，桂圆肉十颗，盐适量，油两匙。</string>
    <string name="hd_how">做法</string>
    <string name="hd_how_todo">1.将鲫鱼收拾干净（可以请商贩代为处理），回来后将鱼体内的黑膜洗净，不然会有土腥味儿；\n
        2.将黑豆用清水冲洗沥干，倒入干净的锅中，小火炒出香味备用；\n
        3.取不粘锅，倒入油，将鲫鱼两面煎黄；\n
        4.取煲汤锅，放入鱼，炒好的黑豆，姜片和桂圆肉，放入适量水，大火烧开，煮10分钟，转小火继续煲煮40－50分钟，关火，吃时调入少许即可。\n\n
        提示：\n
        1.黑豆也可以不炒直接与鲫鱼同煲，但炒过的黑豆香气会更浓；\n
        2.此汤里可以放几颗无核红枣，我刚好家里的红枣用完了，新买的在路上还没到所以就没放。\n
        3.厚朴和鲫鱼不能一起吃:同食可引起身体不适。</string>
    <string name="hd_effect">功效</string>
    <string name="hd_effect_1">鲫鱼:1.增强抗病能力:肝肾疾病，心脑血管疾病患者的良好蛋白质来源，
        常食可增强抗病能力，肝炎、肾炎、高血压、心脏病，慢性支气管炎等疾病患者可经常食用; 
        2.明目益智鲫鱼子能补肝养目，鲫鱼胆有健脑益智的作用。\n\n
        黑豆:又名乌豆，内含丰富的蛋白质、多种矿物质和微量元素。中医认为，其味甘、性平、无毒。有解表清热、养血平肝、补肾壮阴、补虚黑发之功效.\n\n</string>

    <!--冬菇鸡汤-->
    <string name="DGJ">【冬菇鸡汤】</string>
    <string name="dgj_material">准备材料</string>
    <string name="dgj_material_1">鸡(土鸡,走地鸡最好)、冬菇、姜</string>
    <string name="dgj_how">做法</string>
    <string name="dgj_how_todo">1、锅热少许油，放拍过的姜下去爆香；\n2、倒入剁小块的鸡肉，大火翻炒；\n3、炒至鸡肉发白，倒入水大火烧开；\n4、倒入香菇继续大火煮三分钟左右；\n5、转中小火煮10分钟。\n提示: 炒了鸡肉必须大火煮，就如煎过鱼再加水煮汤一般，只有大火煮那汤颜色才会发白，鸡味更浓郁。
        \n桂圆和鸡能一起吃:桂圆具有补益心脾、养血宁神等功效。鸡与当归亦是强身健体的食物，若三者搭配食用，能为人体提供比较丰富的营养成分，对产后体虚乏力的有一定的疗效。</string>
    <string name="dgj_effect">功效</string>
    <string name="dgj_effect_1">冬菇:有补肝肾、健脾胃、益气血、益智安神、美容颜之功效。还可化痰理气，益胃和中，解毒，抗肿瘤，托痘疹。
        主治食欲不振、身体虚弱、小便失禁、大便秘结、形体肥胖、肿瘤疮疡等病症。\n
        鸡肉:蛋白质含量较高，且易被人体吸收入利用，有增强体力，强壮身体的作用。\n
        此外，鸡肉还含有脂肪、钙、磷、铁、镁、钾、钠、维生素A、B1、B2、C、E和烟酸等成分</string>
</resources>
