<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <!--图片-->
        <ImageView
            style="@style/BigPictureStyle"
            android:background="@drawable/hei_dou"/>

        <!--标题-->
        <TextView
            style="@style/BigTextStyle"
            android:text="@string/HD"/>

        <!--准备材料-->
        <TextView
            style="@style/ShortTextStyle"
            android:text="@string/dg_material"
            />

        <TextView
            android:id="@+id/tv_material"
            style="@style/LongText"
            android:text="@string/hd_material_1"/>

        <!--线条-->
        <View
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#55000000"/>
        <!--做法-->
        <TextView
            style="@style/ShortTextStyle"
            android:text="@string/hd_how"/>

        <TextView
            android:id="@+id/tv_method"
            style="@style/LongText"
            android:text="@string/hd_how_todo"/>

        <!--线条-->
        <View
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#55000000"/>
        <!--功效-->
        <TextView
            style="@style/ShortTextStyle"
            android:text="@string/dg_effect"/>

        <TextView
            android:id="@+id/tv_effect"
            style="@style/LongText"
            android:text="@string/hd_effect_1"/>

        <!--线条-->
        <View
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#55000000"/>
        <!--复选框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_material"
                style="@style/CheckStyle"
                android:text="@string/dg_material"
                />

            <CheckBox
                android:id="@+id/cb_method"
                style="@style/CheckStyle"
                android:text="@string/dg_how"
                />

            <CheckBox
                android:id="@+id/cb_effect"
                style="@style/CheckStyle"
                android:text="@string/dg_effect"
                />
        </LinearLayout>
        <!--发送Email按钮-->
        <Button
            style="@style/EmailButtonStyle"
            />
    </LinearLayout>
</ScrollView>